# python-basic-2020-11-il-ga

./: Dockerfile  app.py  pyproject.toml
.github/workflows/: docker.yaml  run_tests.yaml  run_tests.yml
flat/: __init__.py
hw10/: Dockerfile  README.md  app.py
hw10/flat/: flat.py
hw10/templates/: base.html  index.html
hw10/templates/flats/: add.html
templates/flats/: details.html  index.html
tests/test_views/: test_flat.py
views/: flats.py
