[tool.poetry]
name = "hw45"
version = "0.1.0"
description = "A flask application demo"
authors = ["Ivan Lysogor <ilysogor@gmail.com>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^2.11.3"
Flask = "^1.1.2"
pydantic = "^1.7.3"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
